# BUILDER_AGENT

.claude/epics/user-core-template/: 17.md  19.md  20.md  21.md  (+2 more)
.claude/prds/: ecommerce-core-template.md  odoo-frontend-template.md  storefront.md  user-core-template.md  wms-core-template.md
APPS/odoo-frontend/: .env.example  .gitignore  README.md
APPS/odoo-frontend/backend/: alembic.ini  auth_utils.py  db.py  main.py  pyproject.toml  seed.py
APPS/odoo-frontend/backend/alembic/: env.py
APPS/odoo-frontend/backend/alembic/versions/: 0001_initial.py
APPS/odoo-frontend/backend/models/: concrete.py
APPS/odoo-frontend/backend/routers/: auth.py  ecommerce.py  store.py  users.py  wms.py
APPS/odoo-frontend/backend/schemas/: auth.py  ecommerce.py  store.py  users.py  wms.py
APPS/odoo-frontend/backend/tests/: conftest.py  test_auth.py  test_ecommerce.py  test_health.py  test_store.py  test_users.py  test_wms.py
TEMPLATE_CORE/ECOMMERCE/: README.md  pyproject.toml
TEMPLATE_CORE/ECOMMERCE/alembic/: env.py
TEMPLATE_CORE/ECOMMERCE/alembic/versions/: 0001_initial.py
TEMPLATE_CORE/ECOMMERCE/ecommerce_core/: __init__.py  crud.py  db.py  mixins.py
TEMPLATE_CORE/ECOMMERCE/ecommerce_core/models/: __init__.py  attribute.py  cart.py  category.py  coupon.py  order.py  partner.py  payment.py  pricelist.py  product.py  shipping.py
TEMPLATE_CORE/ECOMMERCE/ecommerce_core/utils/: pricing.py  state_machine.py
TEMPLATE_CORE/ECOMMERCE/tests/: conftest.py  test_cart.py  test_catalog.py  test_coupon.py  test_order.py  test_payment.py  test_pricing.py
TEMPLATE_CORE/USER/: README.md  pyproject.toml
TEMPLATE_CORE/USER/alembic/: env.py
TEMPLATE_CORE/USER/tests/: concrete_models.py  conftest.py  test_core.py
TEMPLATE_CORE/USER/user_core/: crud.py  db.py  enums.py  mixins.py
TEMPLATE_CORE/USER/user_core/models/: __init__.py  activity_event.py  membership.py  oauth_account.py  order.py  purchase.py  review.py  user.py  user_profile.py
TEMPLATE_CORE/WMS/: README.md  pyproject.toml
(+160 files in other folders)
